src/other/re2c/bootstrap/scanner.cc
/* Generated by re2c 0.13.5 on Wed Nov  9 18:49:22 2011 */
#line 1 "scanner.re"
#include <stdlib.h>
#include <string.h>
#include <iostream>
#include <sstream>
#include "scanner.h"
#include "parser.h"
#include "parser_tokens.h"
#include "globals.h"
#include "dfa.h"

extern YYSTYPE yylval;

#ifndef MAX
#define MAX(a,b) (((a)>(b))?(a):(b))
#endif

#define	YYCTYPE		unsigned char
#define	YYCURSOR	cursor
#define	YYLIMIT		lim
#define	YYMARKER	ptr
#define	YYCTXMARKER ctx
#define	YYFILL(n)	{cursor = fill(cursor, n);}

#define	RETURN(i)	{cur = cursor; return i;}

namespace re2c
{

#line 50 "scanner.re"


Scanner::ParseMode Scanner::echo()
{
	char *cursor = cur;
	bool ignore_eoc = false;
	int  ignore_cnt = 0;

	if (eof && cursor == eof) // Catch EOF
	{
		return Stop;
	}

	tok = cursor;
echo:

#line 49 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 16) YYFILL(16);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy7;
	case '\n':	goto yy5;
	case '*':	goto yy4;
	case '/':	goto yy2;
	default:	goto yy9;
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '*':	goto yy37;
	default:	goto yy3;
	}
yy3:
#line 220 "scanner.re"
	{
					goto echo;
				}
#line 75 "<stdout>"
yy4:
	yych = *++YYCURSOR;
	switch (yych) {
	case '/':	goto yy32;
	default:	goto yy3;
	}
yy5:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case ' ':	goto yy10;
	case '#':	goto yy13;
	default:	goto yy6;
	}
yy6:
#line 196 "scanner.re"
	{
					if (ignore_eoc)
					{
						ignore_cnt++;
					}
					else if (!DFlag)
					{
						out.write((const char*)(tok), (const char*)(cursor) - (const char*)(tok));
					}
					tok = pos = cursor;
					cline++;
					goto echo;
				}
#line 106 "<stdout>"
yy7:
	++YYCURSOR;
#line 209 "scanner.re"
	{
					if (!ignore_eoc && !DFlag)
					{
						out.write((const char*)(tok), (const char*)(cursor) - (const char*)(tok) - 1);
						// -1 so we don't write out the \0
					}
					if(cursor == eof)
					{
						RETURN(Stop);
					}
				}
#line 121 "<stdout>"
yy9:
	yych = *++YYCURSOR;
	goto yy3;
yy10:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy10;
	case '#':	goto yy13;
	default:	goto yy12;
	}
yy12:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy3;
	case 1: 	goto yy6;
	case 2: 	goto yy33;
	}
yy13:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 5) YYFILL(5);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy13;
	case 'l':	goto yy15;
	default:	goto yy12;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy16;
	default:	goto yy12;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy17;
	default:	goto yy12;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy18;
	default:	goto yy12;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy12;
	default:	goto yy20;
	}
yy19:
	YYCTXMARKER = YYCURSOR + 1;
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy20:
	switch (yych) {
	case '\t':
	case ' ':	goto yy19;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy21;
	default:	goto yy12;
	}
yy21:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy23;
	case '\n':	goto yy25;
	case '\r':	goto yy27;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy21;
	default:	goto yy12;
	}
yy23:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy23;
	case '"':	goto yy28;
	default:	goto yy12;
	}
yy25:
	++YYCURSOR;
	YYCURSOR = YYCTXMARKER;
#line 192 "scanner.re"
	{
					set_sourceline(cursor);
					goto echo;
				}
#line 243 "<stdout>"
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy25;
	default:	goto yy12;
	}
yy28:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy12;
	case '"':	goto yy31;
	case '\\':	goto yy30;
	default:	goto yy28;
	}
yy30:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy12;
	default:	goto yy28;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy25;
	case '\r':	goto yy27;
	default:	goto yy12;
	}
yy32:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy35;
	case '\r':	goto yy34;
	default:	goto yy33;
	}
yy33:
#line 175 "scanner.re"
	{
					if (ignore_eoc)
					{
						if (ignore_cnt)
						{
							out << "\n" << sourceFileInfo;
						}
						ignore_eoc = false;
						ignore_cnt = 0;
					}
					else if (!DFlag)
					{
						out.write((const char*)(tok), (const char*)(cursor) - (const char*)(tok));
					}
					tok = pos = cursor;
					goto echo;
				}
#line 302 "<stdout>"
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy35;
	default:	goto yy12;
	}
yy35:
	++YYCURSOR;
#line 157 "scanner.re"
	{
					cline++;
					if (ignore_eoc)
					{
						if (ignore_cnt)
						{
							out << sourceFileInfo;
						}
						ignore_eoc = false;
						ignore_cnt = 0;
					}
					else if (!DFlag)
					{
						out.write((const char*)(tok), (const char*)(cursor) - (const char*)(tok));
					}
					tok = pos = cursor;
					goto echo;
				}
#line 330 "<stdout>"
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case '!':	goto yy38;
	default:	goto yy12;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy41;
	case 'i':	goto yy40;
	case 'm':	goto yy42;
	case 'r':	goto yy44;
	case 't':	goto yy39;
	case 'u':	goto yy43;
	default:	goto yy12;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'y':	goto yy99;
	default:	goto yy12;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy88;
	default:	goto yy12;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy75;
	default:	goto yy12;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy67;
	default:	goto yy12;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy59;
	default:	goto yy12;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy45;
	case 'u':	goto yy46;
	default:	goto yy12;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy56;
	default:	goto yy12;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy47;
	default:	goto yy12;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy48;
	default:	goto yy12;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy49;
	default:	goto yy12;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy50;
	default:	goto yy12;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy51;
	default:	goto yy12;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy52;
	default:	goto yy12;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy53;
	default:	goto yy12;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy54;
	default:	goto yy12;
	}
yy54:
	++YYCURSOR;
#line 82 "scanner.re"
	{
					if (rFlag)
					{
						mapCodeName.clear();
					}
					else
					{
						fatal("found 'reules:re2c' block without -r flag");
					}
					if (bUsedYYMaxFill && bSinglePass)
					{
						fatal("found scanner block after YYMAXFILL declaration");
					}
					tok = cursor;
					RETURN(Rules);
				}
#line 458 "<stdout>"
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy57;
	default:	goto yy12;
	}
yy57:
	++YYCURSOR;
#line 66 "scanner.re"
	{
					if (rFlag)
					{
						fatal("found standard 're2c' block while using -r flag");
					}
					if (bUsedYYMaxFill && bSinglePass)
					{
						fatal("found scanner block after YYMAXFILL declaration");
					}
					if (!DFlag)
					{
						out.write((const char*)(tok), (const char*)(&cursor[-7]) - (const char*)(tok));
					}
					tok = cursor;
					RETURN(Parse);
				}
#line 484 "<stdout>"
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy60;
	default:	goto yy12;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy61;
	default:	goto yy12;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy62;
	default:	goto yy12;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy63;
	default:	goto yy12;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy64;
	default:	goto yy12;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy65;
	default:	goto yy12;
	}
yy65:
	++YYCURSOR;
#line 98 "scanner.re"
	{
					if (!rFlag)
					{
						fatal("found 'use:re2c' block without -r flag");
					}
					reuse();
					if (bUsedYYMaxFill && bSinglePass)
					{
						fatal("found scanner block after YYMAXFILL declaration");
					}
					if (!DFlag)
					{
						out.write((const char*)(tok), (const char*)(&cursor[-11]) - (const char*)(tok));
					}
					tok = cursor;
					RETURN(Reuse);
				}
#line 541 "<stdout>"
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'x':	goto yy68;
	default:	goto yy12;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy69;
	default:	goto yy12;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy70;
	default:	goto yy12;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy71;
	default:	goto yy12;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy72;
	default:	goto yy12;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy73;
	default:	goto yy12;
	}
yy73:
	++YYCURSOR;
#line 115 "scanner.re"
	{
					if (bUsedYYMaxFill)
					{
						fatal("cannot generate YYMAXFILL twice");
					}
					if (!DFlag)
					{
						out << "#define YYMAXFILL " << maxFill << std::endl;
					}
					tok = pos = cursor;
					ignore_eoc = true;
					bUsedYYMaxFill = true;
					goto echo;
				}
#line 595 "<stdout>"
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy76;
	default:	goto yy12;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy77;
	default:	goto yy12;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy78;
	default:	goto yy12;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy79;
	default:	goto yy12;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy80;
	default:	goto yy12;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy81;
	default:	goto yy12;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy82;
	default:	goto yy12;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy83;
	default:	goto yy12;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy84;
	default:	goto yy12;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy85;
	default:	goto yy12;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy86;
	default:	goto yy12;
	}
yy86:
	++YYCURSOR;
#line 129 "scanner.re"
	{
					tok = pos = cursor;
					genGetStateGoto(out, topIndent, 0);
					ignore_eoc = true;
					goto echo;
				}
#line 671 "<stdout>"
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy89;
	default:	goto yy12;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy90;
	default:	goto yy12;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy91;
	default:	goto yy12;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy92;
	default:	goto yy12;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy93;
	default:	goto yy12;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy94;
	default:	goto yy12;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy95;
	default:	goto yy12;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy96;
	default:	goto yy12;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy97;
	default:	goto yy12;
	}
yy97:
	++YYCURSOR;
#line 135 "scanner.re"
	{
					tok = pos = cursor;
					ignore_eoc = true;
					goto echo;
				}
#line 734 "<stdout>"
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy100;
	default:	goto yy12;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy101;
	default:	goto yy12;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy102;
	default:	goto yy12;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy103;
	default:	goto yy12;
	}
yy103:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy104;
	default:	goto yy12;
	}
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy105;
	default:	goto yy12;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
	case '2':	goto yy106;
	default:	goto yy12;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy107;
	default:	goto yy12;
	}
yy107:
	++YYCURSOR;
#line 140 "scanner.re"
	{
					if (bSinglePass)
					{
						fatal("cannot generate types inline in single pass mode");
					}
					tok = pos = cursor;
					ignore_eoc = true;
					if (bLastPass && !DFlag)
					{
						out << outputFileInfo;
						out << "\n";
						out << typesInline;
						out << "\n";
						out << sourceFileInfo;
					}
					goto echo;
				}
#line 803 "<stdout>"
}
#line 223 "scanner.re"

}

int Scanner::scan()
{
	char *cursor = cur;
	uint depth;

scan:
	tchar = cursor - pos;
	tline = cline;
	tok = cursor;
	if (iscfg == 1)
	{
		goto config;
	}
	else if (iscfg == 2)
	{
		goto value;
	}
